--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,8 @@
 <h1> Songs </h1>
-<%= @songs.each do |song| %>
-<p><%= link_to song.title, song_path(song) %></p>
-<% end %>
+  <tbody>
+    <% @songs.each do |song| %>
+    <tr>
+      <td><%= link_to song.title, song_path(song) %></td>
+    </tr>
+    <% end %>
+ </tbody>
