--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -16,9 +16,9 @@
 <%= f.label :title %><br>
 <%= f.text_field :title %><br>
 <%= f.label :released %><br>
-<%= f.text_field :released %><br>
+<%= f.check_box :released %><br>
 <%= f.label :release_year %><br>
-<%= f.text_field :release_year %><br>
+<%= f.number_field :release_year %><br>
 <%= f.label :artist_name %><br>
 <%= f.text_field :artist_name %><br>
 <%= f.label :genre %><br>
